[package]
name = "img-rs"
version = "2.27.0"
edition = "2021"
description = "safe bindings for stb_image"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/img-rs"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
repository = "https://github.com/lassade/img-rs"

[dependencies]
cty = "0.2.2"
thiserror = "1.0.31"

[build-dependencies]
cc = "1.0.73"
bindgen = { version = "0.60.1", optional = true }

[features]
internal-bindgen-on-build = ["bindgen"]